Update email address to hello@lesaviateursailes.com and improve README documentation

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
 
     <footer>
-        <p><a href="mailto:contact@lesaviateursailes.com">les aviateurs ailés</a> &copy; <span id="year"></span></p>
+        <p><a href="mailto:hello@lesaviateursailes.com">les aviateurs ailés</a> &copy; <span id="year"></span></p>
     </footer>
 
     <script>
